changed image directory

--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -35,7 +35,7 @@ header {
   width: 200px;
   height: 30px;
   border: 0.1rem solid #dddddd;
-  background-image: url(../search.jpg);
+  background-image: url(../image/header/search.jpg);
   background-repeat: no-repeat;
   background-position: left;
   background-position-x: 1rem;
@@ -120,7 +120,7 @@ main {
         transition: all 1s;
         top: 0%; }
         .DoubleBlock .content .post .href::before {
-          content: url(../link.png);
+          content: url(../image/main/link.png);
           opacity: 0.5;
           position: relative;
           top: calc(50% - 18px);
