--- a/dev/scss/main.scss
+++ b/dev/scss/main.scss
@@ -11,9 +11,9 @@ body{
     
 }
 /*header________________*/
-@import 'main-parts/_header.scss';
+@import 'parts/_header.scss';
 /*main________________*/
-@import 'main-parts/_main.scss';
+@import 'parts/_main.scss';
 /*footer________________*/
-@import 'main-parts/_footer.scss';
+@import 'parts/_footer.scss';
 
