--- a/dev/scss/parts/_header.scss
+++ b/dev/scss/parts/_header.scss
@@ -38,7 +38,7 @@ header{
             width: 200px;
             height: 30px;
             border: 0.1rem solid #dddddd;
-            background-image: url(../search.jpg);
+            background-image: url(../image/header/search.jpg);
             background-repeat: no-repeat;
             background-position: left;
             background-position-x: 1rem;
