--- a/dev/scss/parts/_main.scss
+++ b/dev/scss/parts/_main.scss
@@ -64,7 +64,7 @@ main{
                              top:0%;
                            &::before{
     
-                               content:url(../link.png);
+                               content:url(../image/main/link.png);
                                opacity: 0.5;
                                position: relative;
                                top: calc(50% - 18px);
