--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -15,9 +15,6 @@ header {
   header .GridContainer {
     padding: 0 5vw;
     margin: auto; }
-  header .logo {
-    display: flex;
-    justify-content: center; }
 
 .RightSide nav a {
   font: 1.5rem/3.6rem 'OpenSans';
@@ -44,8 +41,7 @@ header {
   color: rgba(179, 179, 179, 0.5); }
 
 .RightSide p {
-  margin-top: 80px;
-  padding-bottom: 80px;
+  padding: 80px 0;
   font: 3rem/3.6rem 'OpenSans';
   font-weight: 300;
   color: #565656; }
@@ -54,13 +50,13 @@ header {
   margin-left: 0; }
 
 @media screen and (min-width: 768px) {
-  .GridContainer {
+  header .GridContainer {
     display: flex;
-    justify-content: space-around; }
+    justify-content: space-between; }
   .RightSide {
     display: flex;
     flex-flow: wrap;
-    justify-content: space-around; }
+    justify-content: space-between; }
     .RightSide nav {
       display: flex; } }
 
@@ -71,7 +67,7 @@ header {
     padding: 5rem 0 0 0; }
     header .GridContainer .RightSide {
       width: calc(75% - 20px); }
-      header .GridContainer .RightSide nav a nav:first-child {
+      header .GridContainer .RightSide nav a:first-child {
         margin-left: 0; }
     header .GridContainer .logo {
       width: calc(25% - 20px);
@@ -82,51 +78,54 @@ main {
   background-color: #f6f6f6;
   position: relative; }
 
+.DoubleBlock h2 {
+  font: 1.4rem/2.1rem 'OpenSans';
+  color: #565656;
+  text-transform: uppercase;
+  margin-top: 2rem;
+  text-align: center; }
+
 .DoubleBlock {
   margin-top: 4rem;
   display: flex;
   flex-flow: column;
-  align-items: center;
   margin: auto; }
-  .DoubleBlock h2 {
-    font: 1.4rem/2.1rem OpenSans;
-    color: #565656;
-    text-transform: uppercase;
-    margin-top: 2rem; }
-  .DoubleBlock .content {
+  .DoubleBlock .blog {
     display: flex;
     flex-flow: column; }
-    .DoubleBlock .content .article h4 {
-      font: 1.5rem/2.1rem OpenSans;
-      color: #565656; }
-    .DoubleBlock .content p {
-      font: 1.2rem/1.8rem OpenSans;
-      color: #959595; }
-    .DoubleBlock .content .post {
-      position: relative;
-      overflow: hidden; }
-      .DoubleBlock .content .post:hover .href {
-        top: 0; }
-      .DoubleBlock .content .post:hover .href::before {
-        transform: rotate(180deg); }
-      .DoubleBlock .content .post img {
-        width: 100%;
-        max-width: 100%; }
-      .DoubleBlock .content .post .href {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        background: rgba(184, 182, 185, 0.5);
+  .DoubleBlock .content .article h4 {
+    font: 1.5rem/2.1rem 'OpenSans';
+    color: #565656;
+    text-align: center; }
+  .DoubleBlock .content p {
+    font: 1.2rem/1.8rem OpenSans;
+    color: #959595;
+    text-align: center; }
+  .DoubleBlock .content .post {
+    position: relative;
+    overflow: hidden; }
+    .DoubleBlock .content .post:hover .href {
+      top: 0; }
+    .DoubleBlock .content .post:hover .href::before {
+      transform: rotate(180deg); }
+    .DoubleBlock .content .post img {
+      width: 100%;
+      max-width: 100%; }
+    .DoubleBlock .content .post .href {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: rgba(184, 182, 185, 0.5);
+      transition: all 1s;
+      top: 0%; }
+      .DoubleBlock .content .post .href::before {
+        content: url(../image/main/link.png);
+        opacity: 0.5;
+        position: relative;
+        top: calc(50% - 18px);
+        left: calc(50% - 18px);
         transition: all 1s;
-        top: 0%; }
-        .DoubleBlock .content .post .href::before {
-          content: url(../image/main/link.png);
-          opacity: 0.5;
-          position: relative;
-          top: calc(50% - 18px);
-          left: calc(50% - 18px);
-          transition: all 1s;
-          display: inline-block; }
+        display: inline-block; }
 
 .img {
   position: relative;
@@ -145,7 +144,7 @@ main {
     flex-flow: column;
     justify-content: flex-end;
     text-decoration: none;
-    font: 1.4rem/1.4rem OpenSans;
+    font: 1.4rem/1.4rem 'OpenSans';
     color: #565656; }
 
 .img:hover .wall {
@@ -162,19 +161,23 @@ main {
         margin-right: 0; } }
 
 @media screen and (min-width: 1170px) {
-  .DoubleBlock {
+  .GridContainer {
     width: 1170px;
+    margin: auto; }
+  .DoubleBlock {
     display: flex;
     flex-flow: row;
-    justify-content: space-between;
-    margin: auto; }
+    justify-content: space-between; }
     .DoubleBlock h2 {
       width: calc(25% - 20px);
-      margin-bottom: 25%; }
+      text-align: left; }
     .DoubleBlock .content {
-      display: flex;
-      flex-flow: row wrap;
       width: calc(75% - 10px); }
+      .DoubleBlock .content .article {
+        width: calc((100% - 80px) / 3); }
+    .DoubleBlock .blog {
+      display: flex;
+      flex-flow: row wrap; }
   .DoubleBlock .content .post .href {
     top: -100%; }
   .img .wall {
@@ -208,13 +211,13 @@ footer {
     margin-left: calc(50% - 83.5px); }
 
 @media screen and (min-width: 768px) {
-  .container .end {
+  .GridContainer .end {
     flex-flow: row; } }
 
 @media screen and (min-width: 1170px) {
-  footer .container {
+  footer .GridContainer {
     width: 1170px; }
-    footer .container .end {
+    footer .GridContainer .end {
       justify-content: flex-end; }
-    footer .container .foot {
+    footer .GridContainer .foot {
       width: calc(75% / 3); } }
