--- a/dev/scss/parts/_footer.scss
+++ b/dev/scss/parts/_footer.scss
@@ -47,12 +47,12 @@ footer{
     }
 
 @media screen and (min-width:768px){
-    .container .end{
+    .GridContainer .end{
         flex-flow: row;
     }
 }
 @media screen and (min-width:1170px){
-    footer .container{
+    footer .GridContainer{
         width: 1170px;
         
         .end{
