--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -3,7 +3,7 @@
   box-sizing: border-box; }
 
 html {
-  font-size: 62.5%; }
+  font-size: 100%; }
 
 body {
   margin: 0;
@@ -28,7 +28,7 @@ header {
     text-decoration: underline; }
 
 .RightSide input[type="text"] {
-  padding-left: 3rem;
+  padding-left: 30px;
   width: 200px;
   height: 30px;
   border: 0.1rem solid #dddddd;
@@ -82,11 +82,11 @@ main {
   font: 1.4rem/2.1rem 'OpenSans';
   color: #565656;
   text-transform: uppercase;
-  margin-top: 2rem;
+  margin-top: 20px;
   text-align: center; }
 
 .DoubleBlock {
-  margin-top: 4rem;
+  margin-top: 40px;
   display: flex;
   flex-flow: column;
   margin: auto; }
@@ -151,6 +151,8 @@ main {
   top: 0; }
 
 @media screen and (min-width: 768px) {
+  html {
+    font-size: 62.5%; }
   .DoubleBlock .content {
     display: flex;
     flex-flow: row wrap;
