--- a/dev/scss/parts/_header.scss
+++ b/dev/scss/parts/_header.scss
@@ -31,7 +31,7 @@ header{
         
     
         input[type="text"] {
-            padding-left: 3rem;
+            padding-left: 30px;
             width: 200px;
             height: 30px;
             border: 0.1rem solid #dddddd;
