--- a/dev/scss/parts/_main.scss
+++ b/dev/scss/parts/_main.scss
@@ -9,7 +9,7 @@ main{
     
     .DoubleBlock{
         
-        margin-top: 4rem;
+        margin-top: 40px;
         display: flex;
         flex-flow: column;
         
@@ -111,6 +111,9 @@ main{
          top:0; }  
 
 @media screen and (min-width:768px) {
+    html {
+        font-size:62.5%;
+    }
     .DoubleBlock .content{
         display: flex;
         flex-flow: row wrap;
