--- a/dev/scss/parts/main/_h2.scss
+++ b/dev/scss/parts/main/_h2.scss
@@ -3,6 +3,6 @@
             font:1.4rem/2.1rem 'OpenSans';
             color: #565656;
             text-transform: uppercase;
-            margin-top: 2rem;
+            margin-top: 20px;
     text-align: center;
         }
