--- a/dev/scss/parts/_main.scss
+++ b/dev/scss/parts/_main.scss
@@ -1,177 +1,135 @@
-main{
-    background-color: #f6f6f6;
-    
-    position:relative;
-    
-    
+.gridContainer {
+    width:1140px;
+    margin:auto;
 }
-@import 'main/_h2.scss';
-    
-    .DoubleBlock{
-        
-        margin-top: 40px;
-        display: flex;
-        flex-flow: column;
-        
-        margin: auto;
-        
-        .blog{
-             display: flex;
-            flex-flow: column;
-        }
-        .content{
-           
-            
-            
-            
-            
-               
-               
-                    
-                        .article h4{
-                             font:1.5rem/2.1rem 'OpenSans';
-                             color: #565656;
-                            text-align: center;
-                         }
-                         p{
-                             font:1.2rem/1.8rem OpenSans;
-                             color: #959595;
-                             text-align: center;
-                        
-                         }
-                          .post{
-                               position: relative;
-                               overflow: hidden;
-                              
-                               &:hover .href{
-                                    top:0;
-                              }
-                                &:hover .href::before{
-                                     transform: rotate(180deg);
-                                    
-                                   
-                             }
-                              img{
-                                  width: 100%;
-                                  max-width:100%
-                                    
-                              }
-                         .href{
-                              position: absolute;
-                              width: 100%;
-                              height: 100%;
-                              background:rgba(184,182,185,.5);
-                              transition:all 1s;
-                             top:0%;
-                           &::before{
-    
-                               content:url(../image/main/link.png);
-                               opacity: 0.5;
-                               position: relative;
-                               top: calc(50% - 18px);
-                               left: calc(50% - 18px);
-                                transition:all 1s;
-                               display: inline-block;
-                            }
-                              
-                             
-                      }
-              }   
-            }
-        
 
-}
-.img{
-    position: relative;
-    overflow: hidden;
+.doubleCol {
+    display:flex;
+    justify-content: space-between;
     
-                            
-    img{
+    
+        .title {
+        padding:1.5rem 0 0;
+        margin-top:0;
+        border-top:.1rem dotted #ccc;
+        text-transform: uppercase;
+        width:calc(25% - 20px);
+        font:1.6rem/2.4rem 'Times New Roman';
+        }
+    
+        .content {
+        width:calc(75% - 20px);
+        }
+    
+        h1 {
+        font-size:1.8rem;
+        text-transform: uppercase;
+        color:#616161;
+        }
+    
+        h2 {
+        font-size:1.6rem;
+        color: #a1a1a1;
+        }
+    
+        p {
+        font-size:1.2rem;
+        line-height: 1.6rem;
+        color: #959595;
+        }
+}
+
+.blog {
+        display:flex;
+
+
+        article {
+            width:calc((100% - 80px) / 3);
+            margin: 0 40px 40px 0;
+            overflow: hidden;
+            position:relative;
+        }
+    
+        article:nth-of-type(3n) {
+        margin:0 0 40px;
+        }
+    
+}
+
+.link {
+        height:175px;
+
+            img {
         width: 100%;
         height: 100%;
-    }
-    .wall{
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        background:rgba(184,182,185,.5);
-        transition:top 1s;
-        top:0;
-        display: flex;
-        flex-flow: column;
-        justify-content: flex-end;
-        text-decoration: none;
-        font:1.4rem/1.4rem 'OpenSans';
-        color: #565656;
-    }
-}
-
-
- .img:hover .wall{
-         top:0; }  
-
-@media screen and (min-width:768px) {
-    html {
-        font-size:62.5%;
-    }
-    .DoubleBlock .content{
-        display: flex;
-        flex-flow: row wrap;
-        justify-content: center;
-        
-        .article{
-            margin-right:4rem;
-                &:nth-of-type(3n){
-                    margin-right: 0;}
         }
-    }
-    
-}
-@media screen and (min-width:1170px){
-    .GridContainer{
-        width: 1170px;
-        margin: auto;
-    }
-    .DoubleBlock{
-        
-         display: flex;
-         flex-flow: row;
-         justify-content: space-between;
-         
-         h2{
-             width: calc(25% - 20px);
-             text-align: left;
-        }
-        .content{
-           
-            
-            width: calc(75% - 10px);
-            .article{
-                width: calc((100% - 80px) / 3);
-            }
-    }
-        .blog{
-             display: flex;
-            flex-flow: row wrap;
-        }
-    
-}
-   .DoubleBlock .content .post .href{
+            a {
+        width:100%;
+        height:175px;
+        position:absolute;
+        background:rgba(0,0,0,.5);
+        color:#fff;
         top:-100%;
-    }
-    .img .wall{
-        top: 100%;
-    }
+        transition: top 1s;
+        }
+
+}
+.link:hover a{
+    top:0;
 }
 
+.gallery {
+    display:flex;
+    flex-flow:wrap;
 
+        article {
+        width:25%;
+        position:relative;
+        overflow:hidden;
+            
+            a {
+    position:absolute;
+    width:100%;
+    height:100%;
+    background:rgba(0,0,0,.5);
+    color:#fff;
+    top:-100%;
+    left:0;
+    padding:1rem;
+    transition:top 1s;
+    display:flex;
+    flex-flow:column;
+    justify-content: flex-end;
+    text-decoration: none; 
+    }
+            
+        h2 {
+    font-size:1.4rem;
+    text-transform: uppercase;
+    color: #959595;
+    }
+        p {
+        font-size: 1.4rem;
+        }
+}
 
+}
+.gallery article:hover a {
+    top:0;
+}
+img {
+    display: block;
+}
+.href {
+    
+    &::before{
+    
+     content:url(../image/main/link.png);
+     opacity: 0.5;
+     position: relative;
+     top: calc(50% - 18px);
+     left: calc(50% - 18px); 
+ }
 
-
-
-
-
-
-
-
+}
 
